<resources>
    <string name="app_name">宅集市</string>

    <string name="tab_shipping">待配送</string>
    <string name="shipping_top">宅集市</string>
    <string name="tab_handled">已处理订单</string>
    <string name="handled_top">订单管理</string>
    <string name="tab_mine">我的</string>
    <string name="mine_top">我的店铺</string>
    <string name="main_top">宅集市</string>
    <string name="back_top">返回</string>

    <string name="exit_app">再按一次退出</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 注册时使用 -->
    <string name="phone_cn">请填写手机号码</string>
    <string name="get_verification_code">获取验证码</string>

    <!--shipping页使用 -->
    <string name="target">距离今日目标仍需</string>
    <string name="target1">单!</string>
    <string name="order_num">18</string>
    <string name="order_num_cn">号</string>
    <string name="order_identifier">订单编号：</string>
    <string name="order_identifier_text">20170213311</string>
    <string name="order_time_cn">下单时间：</string>
    <string name="order_time">4月25日11:00</string>
    <string name="order_time_month">4</string>
    <string name="order_time_month_cn">月</string>
    <string name="order_time_day">25</string>
    <string name="order_time_day_cn">日</string>
    <string name="order_time_hours">22:00</string>
    <string name="shipping_address">地址 ：</string>
    <string name="shipping_address_demo">罗曼风情18单元108室</string>
    <string name="shipping_name">史学伦</string>
    <string name="shipping_colon"> ：</string>
    <string name="shipping_phone">18768515510</string>
    <string name="food_name">矿泉水</string>
    <string name="food_x">x</string>
    <string name="food_num">1</string>
    <string name="food_cost">2</string>
    <string name="food_cost_cn">元</string>
    <string name="discount">优惠</string>
    <string name="discount_cost">4</string>
    <string name="paid">实付</string>
    <string name="cut">-</string>
    <string name="all_cost">4</string>
    <string name="wait_shipping">待配送</string>
    <string name="agree_shipping">同意配送</string>

    <!-- handled中使用 -->
    <string name="all_order">全部</string>
    <string name="distribution">配送中</string>
    <string name="finished">已完成</string>
    <string name="refunds">退款</string>


    <!-- 我的 中使用 -->
    <string name="mine_address">学院路-宁波大红鹰学院</string>
    <string name="distribution_manage">配送管理</string>
    <string name="shop_evaluation">店铺评价</string>
    <string name="account_center">账户中心</string>
    <string name="business_status">营业状态</string>
    <string name="preferential_manage">优惠管理</string>
    <string name="commodity_manage">商品管理</string>
    <string name="business_announcement">商家公告</string>
    <string name="system_settings">系统设置</string>
    <string name="evaluation_five">/5</string>
    <string name="dist_cost_cn">配送费</string>
    <string name="free_cost_cn">免配送费满足金额</string>
    <string name="today_get">52.6</string>
    <string name="all_get">7115.26</string>
    <string name="week_get">526.1</string>
    <string name="month_get">2456.1</string>
    <string name="category_detail">全部</string>
    <string name="food_category">食品零食</string>


</resources>
