<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_shipping"
    android:orientation="vertical">

    <include layout="@layout/main_top"/>
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/allOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_order"
                android:textColor="@color/gray_shipping"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/distribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distribution"
                android:textColor="@color/gray_shipping"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/finished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finished"
                android:textColor="@color/gray_shipping"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/refunds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refunds"
                android:textColor="@color/gray_shipping"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lr_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <View
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/theme_color"/>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </android.support.v4.view.ViewPager>

</LinearLayout>
