<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="55dp">

    <LinearLayout
        android:id="@+id/tabShipping"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageShipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@mipmap/tab_shipping_checked"/>
        <TextView
            android:id="@+id/textShipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/tab_shipping"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabHandled"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageHandled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@mipmap/tab_handled_unchecked"/>
        <TextView
            android:id="@+id/textHandled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/tab_handled"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabMine"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageMine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@mipmap/tab_mine_unchecked"/>
        <TextView
            android:id="@+id/textMine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/tab_mine"/>

    </LinearLayout>

</LinearLayout>