<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/back_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_999"
                android:textSize="16sp"
                android:text="今日收益(元)"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@color/theme_color"
                android:text="@string/today_get"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_999"
                android:textSize="16sp"
                android:text="总金额(元)"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@color/theme_color"
                android:text="@string/all_get"/>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_shipping"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:layout_height="match_parent">
            <TextView
                android:textColor="@color/gray_999"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="近一周收益"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/theme_color"
                android:textSize="24sp"
                android:text="@string/week_get"/>

        </LinearLayout>
        <View
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/gray_shipping"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:layout_height="match_parent">
            <TextView
                android:textColor="@color/gray_999"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="近一个月收益"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/theme_color"
                android:textSize="24sp"
                android:text="@string/month_get"/>

        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_shipping"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:paddingLeft="20dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="收益情况"
                    android:textColor="@color/gray_999"
                    android:textSize="15sp"/>
                <TextView
                    android:paddingRight="20dp"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:textColor="@color/gray_999"
                    android:text="收益明细"
                    android:textSize="15sp"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>